--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,9 @@ dependencies {
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.3'
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation group: 'org.json', name: 'json', version: '20220320'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
