--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation group: 'org.json', name: 'json', version: '20220320'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '3.1.3'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
